# email-rag

./: .gitignore  README.md  pyproject.toml
src/email_rag/: answerer.py  chunking.py  cleaning.py  cli.py  config.py  db.py  embedder.py  fetcher.py  indexer.py  models.py  parsing.py  secrets.py  store.py  threading_.py
tests/: conftest.py  test_answerer.py  test_chunking.py  test_cleaning.py  test_cli.py  test_config.py  test_db.py  test_embedder.py  test_fetcher.py  test_indexer.py  test_models.py  test_parsing.py  test_secrets.py  test_smoke.py  test_store.py  test_threading.py
